--- a/ModConfig/Th3Config.json
+++ b/ModConfig/Th3Config.json
@@ -49,8 +49,8 @@
   "Items": null,
   "ShutdownEnabled": true,
   "BackupOnShutdown": true,
-  "ShutdownTime": "04:00:00",
-  "ShutdownTimes": "1,2,3,4,5,10,20,30",
+  "ShutdownTime": 04:00:00,
+  "ShutdownTimes": 1,2,3,4,5,10,20,30,
   "ShutdownAnnounce": true,
   "MessageCmdColor": "ff9102",
   "SystemMsgColor": "ff9102",
