mod combatabilty solving

--- a/ModConfig/Th3Config.json
+++ b/ModConfig/Th3Config.json
@@ -49,9 +49,9 @@
   "Items": null,
   "ShutdownEnabled": true,
   "BackupOnShutdown": true,
-  "ShutdownTime": 04:00:00,
-  "ShutdownTimes": 1,2,3,4,5,10,20,30,
-  "ShutdownAnnounce": true,
+  "ShutdownTime": "04:00:00",
+  "ShutdownTimes": null,
+  "ShutdownAnnounce": [1,2,3,4,5,10,20,30],
   "MessageCmdColor": "ff9102",
   "SystemMsgColor": "ff9102",
   "ShowRole": false,
