--- a/ModConfig/Th3Config.json
+++ b/ModConfig/Th3Config.json
@@ -47,11 +47,11 @@
   "BackEnabled": false,
   "MessageEnabled": false,
   "Items": null,
-  "ShutdownEnabled": true,
-  "BackupOnShutdown": true,
-  "ShutdownTime": "04:00:00",
+  "ShutdownEnabled": false,
+  "BackupOnShutdown": false,
+  "ShutdownTime": "00:00:00",
   "ShutdownTimes": null,
-  "ShutdownAnnounce": [1,2,3,4,5,10,20,30],
+  "ShutdownAnnounce": null,
   "MessageCmdColor": "ff9102",
   "SystemMsgColor": "ff9102",
   "ShowRole": false,
